--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
 </div> -->
 
 <header>
-  <app-header class="toolbar"></app-header>
+  <app-header class="toolbar" style="z-index: 999;"></app-header>
 </header>
 
 <main style="width: 100%;">
